# rules_python_pytest

./: .bazelrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  internal_deps.bzl
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh  workspace_snippet.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  requirements.in  requirements.txt  test.py  test_sharded.py
python_pytest/: BUILD.bazel  defs.bzl  extensions.bzl  pytest_shim.py  repositories.bzl
python_pytest/private/: BUILD.bazel
python_pytest/tests/: versions_test.bzl
