bazel_dep(name = "com_github_caseyduquettesc_rules_python_pytest", version = "0.0.0", dev_dependency = True, repo_name = "rules_python_pytest")
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)

local_path_override(
    module_name = "com_github_caseyduquettesc_rules_python_pytest",
    path = "../..",
)
