bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "0.0.0", dev_dependency = True, repo_name = "rules_python_pytest")
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.19.0", dev_dependency = True)

local_path_override(
    module_name = "caseyduquettesc_rules_python_pytest",
    path = "../..",
)

# Pretty much copied from https://github.com/bazelbuild/rules_python/releases/tag/0.17.3
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_9",
    python_version = "3.9",
)
use_repo(python, "python3_9_toolchains")

register_toolchains(
    "@python3_9_toolchains//:all",
)

pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "pip",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
