bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "0.0.0", dev_dependency = True, repo_name = "rules_python_pytest")
bazel_dep(name = "bazel_skylib", version = "1.4.2", dev_dependency = True)
bazel_dep(name = "rules_python", version = "0.24.0", dev_dependency = True)

local_path_override(
    module_name = "caseyduquettesc_rules_python_pytest",
    path = "../..",
)

# Pretty much copied from https://github.com/bazelbuild/rules_python/releases/tag/0.24.0
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.9",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
